--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,7 +10,14 @@
     color: #FF5F1F;
 }
 
+
 .carousel-indicators [data-bs-target] {
     background-color: #d9232d;
+}
+
+.education [data-bs-target] {
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
 }
 
