--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -26,3 +26,12 @@ ul.no-bullets {
     padding: 0;
 }
 
+.top-header {
+    background: rgb(144,238,144);
+    background: radial-gradient(circle, rgba(144,238,144,1) 0%, rgba(255,255,255,1) 0%, rgba(144,238,144,1) 100%);
+}
+
+.white-smoke {
+    background-color: #f6f6f6!important;
+}
+
