--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -27,8 +27,8 @@ ul.no-bullets {
 }
 
 .top-header {
-    background: rgb(144,238,144);
-    background: radial-gradient(circle, rgba(144,238,144,1) 0%, rgba(255,255,255,1) 0%, rgba(144,238,144,1) 100%);
+    background: rgb(135,206,235);
+    background: radial-gradient(circle, rgb(135,206,235) 0%, rgba(255,255,255,1) 0%, rgb(135,206,235) 100%);
 }
 
 .white-smoke {
