navbar hover effect on dropdowns

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar a i {
-  font-size: 12px;
+  font-size: 20px;
   line-height: 0;
   margin-left: 5px;
 }
@@ -187,6 +187,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
   color: #d9232d;
+  margin-left: 20px;
 }
 
 .navbar .dropdown:hover > ul {
