navbar hover background color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,7 +186,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #d9232d;
+  color: #fff;
+  background-color: #d9232d;
   margin-left: 5px;
 }
 
