--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2045,7 +2045,7 @@ section {
 }
 
 #footer .footer-top .footer-links ul a:hover {
-  color: white;
+  color: red;
 }
 
 #footer .footer-top .footer-newsletter form {
