--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1351,7 +1351,7 @@ section {
 .contact .php-email-form .error-message {
   display: none;
   color: #fff;
-  background: #ed3c0d;
+  background: #29aae1;
   text-align: left;
   padding: 15px;
   font-weight: 600;
